scss/layout.scss
@import 'node_modules/inuitcss/settings/_settings.core.scss';
@import 'node_modules/inuitcss/tools/_tools.font-size.scss';
@import 'node_modules/inuitcss/tools/_tools.clearfix.scss';

$inuit-fractions: 1 2 3 4 5 6 7 8 9 10 11 12!default;
@import 'node_modules/inuitcss/utilities/_utilities.widths.scss';


@import 'node_modules/inuitcss/objects/_objects.wrapper.scss';

$inuit-wrapper-width: 1920px !default;
@import 'node_modules/inuitcss/objects/_objects.wrapper.scss';

.wrapper {
    padding: $inuit-global-spacing-unit $inuit-global-spacing-unit 0 $inuit-global-spacing-unit;
}


#topInfoBar {
    hr {
        margin-left: $inuit-global-spacing-unit;
        border-top: 1px solid rgb(200, 200, 200);
        border-bottom: 0px;
    }

    #breadcrumb {
        p {
            
            padding-bottom: $inuit-global-spacing-unit/2;
            margin-top: $inuit-global-spacing-unit/2;
            margin-bottom: 0px;
        }
    }
    
    #contactAndLanguage {
        ul {
            padding-bottom: $inuit-global-spacing-unit/2;
            margin-top: $inuit-global-spacing-unit/2;
            margin-bottom: 0px;
            text-align: right;
            
            li {
                padding-left: $inuit-global-spacing-unit;
            }
        }
    }
}


#navbar {

    #logo {
        padding-left: 0px;
    }
    
    #mainMenu {
        a {
            text-decoration: none;
            @include inuit-font-size(18px);
        }
        
        ul {
            margin-bottom: 0px;
            
            li {
                a {
                    color: black;
                }
            }
        }
    }
    
    #orderButton {
        text-align:center;
        
        input {
            @include inuit-font-size(18px);
            background-color:  white;
            border: solid black 2px;
            padding-top: 8px;
            padding-bottom: 8px;
            padding-left: 12px;
            padding-right: 12px;
            margin: auto;
        }
    }
   
    #social-media-buttons {
            text-align: right;
        i {
            padding-left: $inuit-global-spacing-unit/2;
            @include inuit-font-size(24px); 
        }
    }

}


#content {    
    padding-top: $inuit-global-spacing-unit;
    width: 100%;
    
    .tags {
        color: rgb(200, 200, 200);
    }
    
    .imageLarge {
        position: relative;
        max-width: 100%;
    }
}

.o-box-negative-margin {
    margin-left: -$inuit-global-spacing-unit/2;
    margin-right: -$inuit-global-spacing-unit/2;
}

button {
    @include inuit-font-size(18px);
    background-color:  white;
    border: solid black 2px;
    padding-top: 8px;
    padding-bottom: 8px;
    padding-left: 12px;
    padding-right: 12px;
    margin: auto;
    
    &:hover {
        transition: 1s;
        background-color:black;
        color: white;
    }
}

.thumbnail {
    float: left;
}

.fileUploadThumbnails {
    padding-bottom: $inuit-global-spacing-unit;
}

#fileUploadBox {
    background-color:  white;
    border: dashed rgb(200, 200, 200) 2px;
    padding: $inuit-global-spacing-unit;
    margin-bottom: $inuit-global-spacing-unit;
    
    i {
        @include inuit-font-size(24px);
    }
}

#editor {
    textarea {
        width:100%;
    }
    input[type="text"] {
        border-top: 0px;
        border-left: 0px;
        border-right: 0px;
        border-bottom: 1px solid rgb(200, 200, 200);
    }
}

.portfolioItem {
    float: left;
    
    .portfolioBox {
        transition: 2s;
        background-color: rgba(0,0,0,0.1);
        position: relative;
        overflow: hidden;
            
        &:hover {
            transition: 1s;
            background-color: rgba(0,0,0,0.5);
            
            .portfolioView {
                transition: opacity 0.5s, transform 0.25s;
                opacity:1;
                transform: translate(-50%,-30%);
            }
            
            .portfolioImage {
                transform: scale(1.1);
                transition: transform 5s;
            }
        }
        
        .portfolioInfo {
            position: absolute;
            color: white;
            top: 5%;
            left: 4%;
            transform: translate(-5%,-5%);
        }
        
        .portfolioView{
            transition: opacity 0.5s, transform 0.5s;
            opacity: 0;
            transform: translate(-50%,30%);
            font-size: $inuit-global-font-size*2;
            position: absolute;
            color: white;
            top: 50%;
            left: 50%;
        }
        
        .portfolioImage{
            background-size: cover;
            transition: transform 5s;
            background-position: center;
            z-index:-1;
        }
    }
}

